# Source-X

./: .clang-format  .clang-tidy  .clangd  .cmake-format  .editorconfig  .gersemirc  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CMakeSources.cmake  Changelog-56d-Nightlies.txt  Changelog-Heroes Shard.txt  Changelog-X1-Nightlies.txt  Changelog-X1-UOA.txt  Changelog.txt  GraySvr.vcxproj  Porting to X.txt  README.md  REVISIONS-56d-CURRENT-changelog.txt  appveyor.yml  dockerfile  travis.sh
lib/: .cmake-tidy  CMakeLists.txt  CMakeSources.cmake  lib_build_flags_common_c.cmake  lib_compiler_flags_common_c.cmake
lib/bcrypt/: CMakeLists.txt
lib/bcrypt/bcrypt/: ow-crypt.h  wrapper.c
lib/cdrc/: CMakeLists.txt
lib/flat_containers/: CMakeLists.txt  README.md
lib/libev/: CMakeLists.txt  config.h.in  configure.cmake  wrapper_ev.c
lib/libev/cmake/: configure.cmake
lib/libev/src/: ev.c
lib/mariadb/: config.h  configure.cmake  mariadb_version.h
lib/mariadb_connector_c/: CMakeLists.txt
lib/mariadb_connector_c/mysql/: config.h  configure.cmake  mariadb_version.h
lib/object_ptr/: CMakeLists.txt  object_ptr.hpp
lib/object_ptr/object_ptr/: README.md  object_ptr.hpp
lib/parallel_hashmap/: CMakeLists.txt
lib/parallel_hashmap/parallel_hashmap/: phmap_base.h
lib/rand/: CMakeLists.txt
lib/rand/rand/: xorshift.hpp
lib/regex/: CMakeLists.txt
lib/regex/regex/: deelx.h
lib/sqlite/: CMakeLists.txt  SQLite.cpp  SQLite.h
lib/twofish/: CMakeLists.txt
lib/twofish/twofish/: README  aes.h  debug.h  platform.h  table.h  twofish.c  twofish.h
lib/zlib/: CMakeLists.txt  gzguts.h  zconf.h
src/: CMakeLists.txt  CMakeMINGW.cmake  CMakeMSVC.cmake  CMakeSources.cmake  CMakeUnix.cmake  CompilerFlags.cmake  Sphere.ini  doxygen.cfg  sphere.dic  sphere.ini  sphereCrypt.ini
src/cmake/: CMakeConfigureLibev.cmake  CMakeDefaultToolchain.cmake  CMakeDetectArch.cmake  CMakeGitStatus.cmake  CMakeLists.txt  CMakeSources.cmake  spheresvr.vcxproj.user.in
src/cmake/toolchains/: Linux-Clang-x86_64.cmake  Linux-Clang_common.inc.cmake  (+26 more)
src/common/: .CScriptObj.cpp.kate-swp  CArray.cpp  CArray.h  CAssoc.cpp  CAssoc.h  CCacheableScriptFile.cpp  CCacheableScriptFile.h  CDataBase.cpp  CDataBase.h  CEncrypt.cpp  CEncrypt.h  CException.cpp  CException.h  CExpression.cpp  CExpression.h  CFile.cpp  CFile.h  CFileList.cpp  CFileList.h  CFloatMath.cpp  CFloatMath.h  CGrayData.cpp  CGrayInst.cpp  CGrayInst.h  CGrayMap.cpp  CGrayMap.h  CGrayUID.cpp  CGrayUID.h  CGrayUIDextra.h  CLanguageID.cpp  CLanguageID.h  CLocalVarsExtra.cpp  CLocalVarsExtra.h  CLog.cpp  CLog.h  CMD5.cpp  CMD5.h  CMemBlock.h  CObjBaseTemplate.cpp  CObjBaseTemplate.h  (+95 more)
src/game/: CAccount.cpp  CAccount.h  CBase.cpp  CBase.h  CChampion.cpp  CChampion.h  CChar.cpp  CChar.h  CCharBase.cpp  CCharBase.h  CCharFight.cpp  CCharMemory.cpp  CCharNPC.cpp  CCharNPCAct.cpp  CCharNPCAct_Fight.cpp  CCharNPCAct_Magic.cpp  CCharNPCAct_Vendor.cpp  CCharNPCPet.cpp  CCharNPCStatus.cpp  CCharRefArray.cpp  CCharSkill.cpp  CCharSpell.cpp  CCharStatus.cpp  CCharUse.cpp  CCharact.cpp  CChat.cpp  CChat.h  CChatChanMember.cpp  CChatChannel.cpp  CClient.cpp  CClient.h  CClientDialog.cpp  CClientEvent.cpp  CClientGMPage.cpp  CClientLog.cpp  CClientMsg.cpp  CClientTarg.cpp  CClientTooltip.cpp  CClientTooltip.h  CClientUse.cpp  (+120 more)
src/graysvr/: CAccount.cpp  CAccount.h  CBase.cpp  CBase.h  CChar.cpp  CChar.h  CCharAttacker.cpp  CCharBase.cpp  CCharBase.h  CCharFight.cpp  CCharMemory.cpp  CCharNPC.cpp  CCharNPC.h  CCharNPCAct.cpp  CCharNPCAct_Fight.cpp  CCharNPCAct_Magic.cpp  CCharNPCAct_Vendor.cpp  CCharNPCPet.cpp  CCharNPCStatus.cpp  CCharNotoriety.cpp  CCharPlayer.cpp  CCharPlayer.h  CCharRefArray.cpp  CCharRefArray.h  CCharSkill.cpp  CCharSpell.cpp  CCharStat.cpp  CCharStatus.cpp  CCharUse.cpp  CCharact.cpp  CChat.cpp  CChat.h  CChatChanMember.cpp  CChatChanMember.h  CChatChannel.cpp  CChatChannel.h  CClient.cpp  CClient.h  CClientDialog.cpp  CClientEvent.cpp  (+77 more)
src/network/: CClientIterator.cpp  CClientIterator.h  CIPHistoryManager.cpp  CIPHistoryManager.h  CNetState.cpp  CNetState.h  CNetworkInput.cpp  CNetworkInput.h  CNetworkManager.cpp  CNetworkManager.h  CNetworkOutput.cpp  CNetworkOutput.h  CNetworkThread.cpp  CNetworkThread.h  CPacketManager.cpp  CPacketManager.h  CSocket.cpp  CSocket.h  PingServer.cpp  PingServer.h  linuxev.cpp  linuxev.h  net_datatypes.cpp  net_datatypes.h  network.cpp  network.h  network_common.cpp  network_multithreaded.cpp  network_singlethreaded.cpp  packet.cpp  packet.h  receive.cpp  receive.h  send.cpp  send.h
src/resources/: SphereSvr.rc  win_resource.h
src/sphere/: ConsoleInterface.cpp  ConsoleInterface.h  GlobalInitializer.cpp  GlobalInitializer.h  GraySvr.rc  MainThread.cpp  MainThread.h  ProfileData.cpp  ProfileData.h  ProfileTask.cpp  ProfileTask.h  SphereSvr.rc  StartupMonitorAPI.h  StartupMonitorThread.cpp  StartupMonitorThread.h  UnixTerminal.cpp  UnixTerminal.h  asyncdb.cpp  asyncdb.h  containers.cpp  containers.h  linuxev.cpp  linuxev.h  mutex.cpp  mutex.h  ntservice.cpp  ntservice.h  ntwindow.cpp  ntwindow.h  resource.h  strings.cpp  strings.h  threads.cpp  threads.h
src/tables/: CBaseBaseDef_props.tbl  CCPropsChar_props.tbl  CCPropsItemChar_props.tbl  CCPropsItemEquippable_props.tbl  CCPropsItemWeaponRanged_props.tbl  CCPropsItemWeapon_props.tbl  CCPropsItem_props.tbl  CCharBase_props.tbl  CCharNpc_props.tbl  CCharPlayer_functions.tbl  CCharPlayer_props.tbl  CChar_functions.tbl  CChar_props.tbl  CClient_functions.tbl  CClient_props.tbl  CItemBase_props.tbl  CItemStone_functions.tbl  CItemStone_props.tbl  CItem_functions.tbl  CItem_props.tbl  CObjBase_functions.tbl  CObjBase_props.tbl  CParty_functions.tbl  CParty_props.tbl  CSFileObjContainer_functions.tbl  CSFileObjContainer_props.tbl  CSFile_functions.tbl  CSFile_props.tbl  CScriptObj_functions.tbl  CSector_functions.tbl  CStoneMember_functions.tbl  CStoneMember_props.tbl  classnames.tbl  defmessages.tbl  triggers.tbl
tests/: CMakeLists.txt  CMakeSources.cmake  coverity_model.cpp
tests/src/: t_CPointBase.cpp  t_CUOClientVersion.cpp  t_num_parsing.cpp
(+716 files in other folders)
